--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@
 /* home */
 .home{
 
-    margin:-20px 0;
+    margin-top: 85px;
     justify-content: center;
     align-items: center;
     display: flex;  
@@ -84,7 +84,7 @@
     background-color:#EBF3E8;
    
     text-align: center;
-    padding: 30px 0 0 0;
+    padding: 20px 0 0 0;
     font-size: 20px;
 
 }
@@ -98,7 +98,7 @@
 }
 /* menu section */
 .menu{
-   
+  margin-top:-10px;
     justify-content: center;
     align-items: center;
     display: flex;
@@ -122,10 +122,17 @@
     text-align: center; 
     border: none;
     border-radius: 8px;
+       
 }
 .view-menu:hover{
     color:brown;
 }
+.menu-button{
+    justify-content: center;
+    align-items: center;
+    display: flex; 
+}
+
 /* contact section */
 .contact{
     
@@ -152,15 +159,16 @@
 /* Gallery Section */
 .gallery{
    
-       background-color: #B2C8BA;
+ background-color: #B2C8BA;
     
+       
 
 }
 .gallery-row1 .gallery-row2{
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 10px; 
+     padding: 10px; 
 }
 .gallery-image{
     justify-content: center;
@@ -170,9 +178,10 @@
     
 }
 
+
 /* Feedback Section */
 .feedback{
-    
+    margin-top: -10px;
     justify-content: center;
     align-items: center;
     display: flex;
@@ -189,12 +198,16 @@
     padding: 10px;
 }
 .feedback-button{
-    width: auto;
+    width:100%;
 }
 .feedback-form{
     background-image: url(./images/modal.jpeg);
     padding: 20px;
 }
+.feedback-modal{
+    justify-content: center;
+    align-items: center;
+    display: flex;}
 
 /* Footer section */
 .footer{
