--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@
 /* home */
 .home{
 
-    margin-top: 85px;
+    margin-top:-50px;
     justify-content: center;
     align-items: center;
     display: flex;  
@@ -50,6 +50,7 @@
     width: 25%;
 }
 .small-screen{
+    margin-top: 85px;
     width: 110%;
     display: block
    
@@ -98,20 +99,19 @@
 }
 /* menu section */
 .menu{
-  margin-top:-10px;
-    
+  margin-top:-10px;    
     background-image: url(./images/pexels-valeria-boltneva-1484516.jpg);
     background-size: 100%;
     padding:20px;
+    
 }
-.menu-row1,.menu-row2{
-    padding: 10px;
-}
+
 .menu-card{
-    padding: 15px;
+    padding: 10px;
     justify-content: center;
     align-items: center;
     display: flex;
+    
 }
 .view-menu:hover{ 
    color: #f60404; 
@@ -125,13 +125,14 @@
 .contact{
     
     margin-bottom: 50px;
-    justify-content: center;
+    
     align-items: center;
     justify-content: center;
     display: flex;
     padding: 10px;
     text-align: center;
     background-color:#B2C8BA;
+    font-size: 20px;
    
 }
 .directions{
@@ -186,7 +187,7 @@
     padding: 10px;
 }
 .feedback-button{
-    width:100%;
+    width:30%;
 }
 .feedback-button:hover{
     color: red;
@@ -249,7 +250,7 @@ padding: 20px; }
 /* Media Query */
 @media(max-width:800px){
    .feedback-button,.view-menu{
-        width:auto;
+        width:100%;
     }
     .logo,.about-image1,.footer-image,.title{
         display: none;
