--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@
   background-image:url(./images/home.jpg);
   background-size: 120%;
   background-attachment: fixed;
-  padding: 20px;
+  
 }
 
 
@@ -50,9 +50,9 @@
     width: 25%;
 }
 .small-screen{
-    margin-top: 85px;
-    width: 110%;
-    display: block
+   margin-top:0px;
+    width: 100%;
+    
    
 }
 
@@ -248,7 +248,14 @@ padding: 20px; }
  }
 
 /* Media Query */
-@media(max-width:800px){
+
+
+@media(max-width:700px){
+    .small-screen{
+        margin-top: -30px;
+    }
+    
+    
    .feedback-button,.view-menu{
         width:100%;
     }
@@ -264,7 +271,7 @@ padding: 20px; }
     }
     
 }
-@media(min-width:800px){
+@media(min-width:700px){
     .small-screen,.about-image2{
         display: none;
     }    
