--- a/style.css
+++ b/style.css
@@ -4,7 +4,9 @@
      width: 100%;
      
 }
-
+.html{
+    scroll-behavior: smooth;
+}
 .container_fluid{
     background-color: #B2C8BA;
 }
@@ -102,6 +104,7 @@
     font-weight: 500;
     justify-content: center;
     align-items: center;
+    padding: 5px;
     
 }
 /* menu section */
@@ -121,10 +124,8 @@
     display: flex;
     
 }
-.view-menu:hover{ 
-   color: #f60404; 
-}
-.order_now:hover{
+
+.view-menu:hover{
     color:brown;
 }
 
@@ -195,9 +196,10 @@
 .feedback-button{
     width:30%;
 }
-.feedback-button:hover{
-    color: red;
+.yourfeedback:hover{
+    color:brown;
 }
+
 .feedback-form{
     background-image: url(./images/White-paper-texture-for-Projects.jpg);
     padding: 20px;
